--- a/pkg/rules/r0006-unexpected-service-account-token-access/unexpected-service-account-token-access.yaml
+++ b/pkg/rules/r0006-unexpected-service-account-token-access/unexpected-service-account-token-access.yaml
@@ -12,19 +12,19 @@ spec:
     id: "R0006"
     description: "Detecting unexpected access to service account token."
     expressions:
-      message: "'Unexpected access to service account token: ' + data.event.fullPath + ' with flags: ' + data.event.flags.join(',')"
-      unique_id: "data.event.comm"
+      message: "'Unexpected access to service account token: ' + event.fullPath + ' with flags: ' + event.flags.join(',')"
+      unique_id: "event.comm"
       rule_expression:
         - event_type: "open"
           expression: >
-            ((data.event.fullPath.startsWith('/run/secrets/kubernetes.io/serviceaccount') && data.event.fullPath.endsWith('/token')) || 
-             (data.event.fullPath.startsWith('/var/run/secrets/kubernetes.io/serviceaccount') && data.event.fullPath.endsWith('/token')) ||
-             (data.event.fullPath.startsWith('/run/secrets/eks.amazonaws.com/serviceaccount') && data.event.fullPath.endsWith('/token')) ||
-             (data.event.fullPath.startsWith('/var/run/secrets/eks.amazonaws.com/serviceaccount') && data.event.fullPath.endsWith('/token'))) &&
-            !ap.was_path_opened_with_prefix(data.event.runtime.containerId, '/run/secrets/kubernetes.io/serviceaccount') &&
-            !ap.was_path_opened_with_prefix(data.event.runtime.containerId, '/var/run/secrets/kubernetes.io/serviceaccount') &&
-            !ap.was_path_opened_with_prefix(data.event.runtime.containerId, '/run/secrets/eks.amazonaws.com/serviceaccount') &&
-            !ap.was_path_opened_with_prefix(data.event.runtime.containerId, '/var/run/secrets/eks.amazonaws.com/serviceaccount')
+            ((event.fullPath.startsWith('/run/secrets/kubernetes.io/serviceaccount') && event.fullPath.endsWith('/token')) || 
+             (event.fullPath.startsWith('/var/run/secrets/kubernetes.io/serviceaccount') && event.fullPath.endsWith('/token')) ||
+             (event.fullPath.startsWith('/run/secrets/eks.amazonaws.com/serviceaccount') && event.fullPath.endsWith('/token')) ||
+             (event.fullPath.startsWith('/var/run/secrets/eks.amazonaws.com/serviceaccount') && event.fullPath.endsWith('/token'))) &&
+            !ap.was_path_opened_with_prefix(event.runtime.containerId, '/run/secrets/kubernetes.io/serviceaccount') &&
+            !ap.was_path_opened_with_prefix(event.runtime.containerId, '/var/run/secrets/kubernetes.io/serviceaccount') &&
+            !ap.was_path_opened_with_prefix(event.runtime.containerId, '/run/secrets/eks.amazonaws.com/serviceaccount') &&
+            !ap.was_path_opened_with_prefix(event.runtime.containerId, '/var/run/secrets/eks.amazonaws.com/serviceaccount')
     profile_dependency: 1
     severity: 5
     support_policy: false
