--- a/pkg/rules/r0003-unexpected-system-call/unexpected-system-call.yaml
+++ b/pkg/rules/r0003-unexpected-system-call/unexpected-system-call.yaml
@@ -12,11 +12,11 @@ spec:
     id: "R0003"
     description: "Detects unexpected system calls that are not whitelisted by application profile"
     expressions:
-      message: "'Unexpected system call detected: ' + data.event.syscallName + ' with PID ' + string(data.event.pid)"
-      unique_id: "data.event.syscallName"
+      message: "'Unexpected system call detected: ' + event.syscallName + ' with PID ' + string(event.pid)"
+      unique_id: "event.syscallName"
       rule_expression:
         - event_type: "syscall"
-          expression: "!ap.was_syscall_used(data.event.runtime.containerId, data.event.syscallName)"
+          expression: "!ap.was_syscall_used(event.runtime.containerId, event.syscallName)"
     profile_dependency: 0
     severity: 1
     support_policy: false
