--- a/pkg/rules/r0005-unexpected-domain-request/unexpected-domain-request.yaml
+++ b/pkg/rules/r0005-unexpected-domain-request/unexpected-domain-request.yaml
@@ -12,11 +12,11 @@ spec:
     id: "R0005"
     description: "Detecting unexpected domain requests that are not whitelisted by application profile."
     expressions:
-      message: "'Unexpected domain communication: ' + data.event.name + ' from: ' + data.event.k8s.containerName"
-      unique_id: "data.event.comm + '_' + data.event.name"
+      message: "'Unexpected domain communication: ' + event.name + ' from: ' + event.k8s.containerName"
+      unique_id: "event.comm + '_' + event.name"
       rule_expression:
         - event_type: "dns"
-          expression: "!nn.is_domain_in_egress(data.event.runtime.containerId, data.event.name) && !data.event.name.endsWith('.svc.cluster.local.')"
+          expression: "!nn.is_domain_in_egress(event.runtime.containerId, event.name) && !event.name.endsWith('.svc.cluster.local.')"
     profile_dependency: 0
     severity: 1
     support_policy: false
