--- a/pkg/rules/r1006-unshare-syscall/unshare-syscall.yaml
+++ b/pkg/rules/r1006-unshare-syscall/unshare-syscall.yaml
@@ -12,11 +12,11 @@ spec:
     id: "R1006"
     description: "Detecting Unshare System Call usage, which can be used to escape container."
     expressions:
-      message: "'Unshare system call detected: ' + data.event.syscallName + ' with PID ' + string(data.event.pid)"
-      unique_id: "data.event.syscallName"
+      message: "'Unshare system call detected: ' + event.syscallName + ' with PID ' + string(event.pid)"
+      unique_id: "event.syscallName"
       rule_expression:
         - event_type: "syscall"
-          expression: "data.event.syscallName == 'unshare' && !ap.was_syscall_used(data.event.runtime.containerId, data.event.syscallName)"
+          expression: "event.syscallName == 'unshare' && !ap.was_syscall_used(event.runtime.containerId, event.syscallName)"
     profile_dependency: 2
     severity: 5
     support_policy: false
