--- a/pkg/rules/r1012-hardlink-created-over-sensitive-file/hardlink-created-over-sensitive-file.yaml
+++ b/pkg/rules/r1012-hardlink-created-over-sensitive-file/hardlink-created-over-sensitive-file.yaml
@@ -12,11 +12,11 @@ spec:
     id: "R1012"
     description: "Detecting hardlink creation over sensitive files."
     expressions:
-      message: "'Hardlink created over sensitive file: ' + data.event.oldpath + ' - ' + data.event.newpath"
-      unique_id: "data.event.comm + '_' + data.event.oldpath"
+      message: "'Hardlink created over sensitive file: ' + event.oldpath + ' - ' + event.newpath"
+      unique_id: "event.comm + '_' + event.oldpath"
       rule_expression:
         - event_type: "hardlink"
-          expression: "(data.event.oldpath.startsWith('/etc/shadow') || data.event.oldpath.startsWith('/etc/sudoers')) && !ap.was_path_opened(data.event.runtime.containerId, data.event.oldpath)"
+          expression: "(event.oldpath.startsWith('/etc/shadow') || event.oldpath.startsWith('/etc/sudoers')) && !ap.was_path_opened(event.runtime.containerId, event.oldpath)"
     profile_dependency: 1
     severity: 5
     support_policy: true
